# face_detection_cv

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.txt  Makefile.mk  README.md
.github/workflows/: ci.yml
backend/app/: api.py  main.py
cpp/: CMakeLists.txt
cpp/src/: base.cpp  detector.cpp  detector.h
cpp/tests/: test_detector.cpp
frontend/: index.html  style.css
src/: base.cpp  detector.cpp  detector.h
tests/: test_detector.cpp
